Provide example for img with header

--- a/src/navigation/style.module.css
+++ b/src/navigation/style.module.css
@@ -1,7 +1,10 @@
 .contentContainer {
     flex: 1;
-    background-color: aqua;
+    background-color: whitesmoke;
 
+    /* max-width: 100%; */
+
+    overflow-x: hidden;
     overflow-y: auto;
 }
 
