Start implementation of  blockchain

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,16 @@ body {
 	/* flex-direction: column; */
 }
 
+@media(max-width: 1080px) {
+    html {
+        font-size: 93.75%;
+    }
+}
+@media(max-width: 720px) {
+    html {
+        font-size: 87.5%;
+    }
+}
 
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
